--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Unfair Mario</title>
+    <title>Burger tycoon</title>
     <link rel="shortcut icon" type="image/ico" href="flash.ico">
     <script>
       window.RufflePlayer = window.RufflePlayer || {};
@@ -30,7 +30,7 @@
   </head>
   <body style="background-color:black;">
     <center>
-      <img src="title.png" style="padding:5px;">
+      <img src="download (4).jpeg" style="padding:5px;">
       <div id="container" style="border: #ccc 3px solid;height:600px;width:817px;"></div>
     <script>
       window.RufflePlayer = window.RufflePlayer || {};
@@ -41,7 +41,7 @@
           container.appendChild(player);
           player.style.height = "600px";
           player.style.width = "817px";
-          player.load("unfair-mario.swf");
+          player.load("Burger Tycoon.swf");
       });
     </script>
     <script src="ruffle/ruffle.js"></script>
